<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.ui.addpharmacy.AddPharmacy">

    <TextView
        android:id="@+id/tv_register_home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_mini"
        android:layout_marginTop="@dimen/padding_mini"
        android:layout_marginEnd="@dimen/padding_mini"
        android:text="@string/register_new_pharmacy_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_xxl" />

    <TextView
        android:id="@+id/tv_register_home_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_register_home_title"
        android:text="@string/register_new_pharmacy_subtitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_s" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_register_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        app:cardElevation="@dimen/padding_mini">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_register_pharmacy_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_mini"
                android:layout_marginEnd="@dimen/padding_mini"
                android:hint="@string/register_pharmacy_name"
                android:padding="@dimen/padding_mini"
                android:textColorHint="@color/secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_pharmacy_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/register_pharmacy_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:labelFor="@id/register_pharmacy_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_register_pharmacy_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_mini"
                android:layout_marginEnd="@dimen/padding_mini"
                android:hint="@string/register_pharmacy_location"
                android:padding="@dimen/padding_mini"
                android:textColorHint="@color/secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_pharmacy_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/register_pharmacy_location"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:labelFor="@id/register_pharmacy_location" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_register_pharmacy_route"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_mini"
                android:padding="@dimen/padding_mini"
                android:textColorHint="@color/secondary">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_register_pharmacy_route"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_mini"
                    android:drawablePadding="@dimen/padding_midi"
                    android:hint="@string/register_pharmacy_route"
                    android:padding="@dimen/padding_maxi" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_register_pharmacy_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_mini"
                android:layout_marginEnd="@dimen/padding_mini"
                android:hint="@string/register_pharmacy_phone_number"
                android:padding="@dimen/padding_mini"
                android:textColorHint="@color/secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_pharmacy_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/register_pharmacy_phone_number"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:labelFor="@id/register_pharmacy_phone_number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_register_pharmacy_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_mini"
                android:layout_marginEnd="@dimen/padding_mini"
                android:hint="@string/register_pharmacy_email"
                android:padding="@dimen/padding_mini"
                android:textColorHint="@color/secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_pharmacy_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/register_pharmacy_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:labelFor="@id/register_pharmacy_email" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_register_pharmacy_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_mini"
                android:padding="@dimen/padding_mini"
                android:textColorHint="@color/secondary">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_register_pharmacy_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_mini"
                    android:drawablePadding="@dimen/padding_midi"
                    android:hint="@string/register_pharmacy_type"
                    android:padding="@dimen/padding_maxi" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/pharmacy_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_register_home"
        android:layout_marginStart="@dimen/padding_mini"
        android:layout_marginTop="@dimen/padding_mini"
        android:layout_marginEnd="@dimen/padding_mini"
        android:layout_marginBottom="@dimen/padding_mini"
        android:backgroundTint="@color/secondary"
        android:padding="@dimen/padding_mini"
        android:text="@string/pharmacy_register_button" />

</RelativeLayout>