<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_pharmacy_phone_number"
        android:padding="@dimen/padding_mini"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/text_input_layout_edit_pharmacy_phone_number_text"
        android:layout_margin="@dimen/padding_mini">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/et_edit_pharmacy_phone_number_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="@dimen/margin_midi"
        android:layout_below="@id/text_input_layout_edit_pharmacy_phone_number_text">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_pharmacy_phone_number_cancel_button"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:backgroundTint="@color/negative"
            android:text="@string/btn_cancel_edit"
            app:cornerRadius="@dimen/margin_midi"
            android:textAllCaps="true"/>


        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_pharmacy_phone_number_confirm_button"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_confirm_edit"
            app:cornerRadius="@dimen/margin_midi"
            android:textAllCaps="true"/>


    </LinearLayout>


</RelativeLayout>