<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:hint="@string/select_new_pharmacy_type"
        android:padding="@dimen/padding_mini"
        android:id="@+id/text_input_layout_edit_pharmacy_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_margin="@dimen/padding_mini">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auto_complete_text_edit_pharmacy_type"
            android:inputType="none"
            android:padding="@dimen/margin_midi"/>


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="@dimen/margin_midi"
        android:layout_below="@id/text_input_layout_edit_pharmacy_type">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_pharmacy_type_cancel_button"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:backgroundTint="@color/negative"
            android:text="@string/btn_cancel_edit"
            app:cornerRadius="@dimen/margin_midi"
            android:textAllCaps="true"/>


        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_pharmacy_type_confirm_button"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_confirm_edit"
            app:cornerRadius="@dimen/margin_midi"
            android:textAllCaps="true"/>


    </LinearLayout>


</RelativeLayout>